# src/main/java/school/hei/haapi/endpoint/rest/controller/EventController.java
@@ -4,6 +4,7 @@ import static java.util.stream.Collectors.toUnmodifiableList;
 
 import java.time.Instant;
 import java.util.List;
+import java.util.Optional;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -18,6 +19,7 @@ import school.hei.haapi.endpoint.rest.model.AttendanceStatus;
 import school.hei.haapi.endpoint.rest.model.CreateEvent;
 import school.hei.haapi.endpoint.rest.model.Event;
 import school.hei.haapi.endpoint.rest.model.EventParticipant;
+import school.hei.haapi.endpoint.rest.model.EventParticipantStats;
 import school.hei.haapi.endpoint.rest.model.EventType;
 import school.hei.haapi.endpoint.rest.model.FrequencyScopeDay;
 import school.hei.haapi.endpoint.rest.model.Group;
@@ -98,6 +100,18 @@ public class EventController {
         .stream()
         .map(eventParticipantMapper::toRest)
         .collect(toUnmodifiableList());
+  }
+
+  @GetMapping("/events/participants/{participant_id}/stats")
+  public EventParticipantStats getEventParticipantStats(
+      @PathVariable(name = "participant_id") String participantId,
+      @RequestParam(name = "from_event_begin", required = false) Instant from,
+      @RequestParam(name = "to_event_begin", required = false) Instant to) {
+    Optional<Instant> optionalFrom = Optional.ofNullable(from);
+    Optional<Instant> optionalTo = Optional.ofNullable(to);
+
+    return eventParticipantService.getEventParticipantStats(
+        participantId, optionalFrom, optionalTo);
   }
 
   @PutMapping("/events/{event_id}/participants")
